# CGgraphV1

./: .gitignore  CGgraph.cu  CGgraph.hpp  CMakeLists.txt  README  README.md
project/: CTA_device.hpp  Compute_degree.cuh  algorithm_device.hpp  algorithm_host.hpp  flag.cpp  getGraphCSR.hpp  graph_coProcess.hpp  graph_core.hpp  graph_cores.hpp  graph_device.hpp  help.hpp  main_enginer.hpp  reorder.hpp  sortNbr.hpp  subgraph_extraction.hpp
src/Basic/: basic_include.cuh
src/Basic/Balance/: taskSteal.hpp  threadState.hpp
src/Basic/Bitmap/: fixed_bitset.cuh
src/Basic/Console/: console_V3.hpp
src/Basic/GPU/: cuda_check.cuh  cuda_func.hpp  gpu_util.cuh
src/Basic/Graph/: basic_def.hpp  basic_struct.hpp  graphBinReader.hpp  graphFileList.hpp  util.hpp
src/Basic/Log/: log.hpp
src/Basic/Other/: IO.hpp  create_folder.hpp  doubleBuffer.cuh  finder.cuh  monitor.hpp  tqdm.hpp
src/Basic/Thread/: atomic_linux.hpp  cpu_info.hpp  omp_def.hpp
src/Basic/Time/: time.hpp
src/Basic/Type/: data_type.hpp
